--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#043449">
-  <link rel="icon" href="/icon.png">
+  <link rel="icon" href="icons/favicon.png" type="image/png">
 </head>
 <body>
   <div class="container py-5">
