--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#043449">
   <link rel="icon" href="icons/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="icons/icon-512.png">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container py-5">
