--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#043449">
   <link rel="icon" href="icons/favicon.png" type="image/png">
   <link rel="apple-touch-icon" href="icons/icon-512.png">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container py-5">
