--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container py-5">
-    <h1 class="mb-4">DMG Overzicht Vestigingen</h1>
+<header>
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<h1 class="py-4">DMG Overzicht Vestigingen</h1>
+			</div>
+		</div>
+	</div>
+</header>
+  <div class="container pt-3">
     <div class="row mb-3">
       <div class="col-12">
         <input type="text" id="zoekveld" class="form-control form-control-lg" placeholder="Zoek op code, formule of plaatsnaam...">
