--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="manifest" href="/manifest.json">
 	<meta name="theme-color" content="#043449">
+	<meta name="robots" content="noindex">
 	<link rel="icon" href="icons/favicon.png" type="image/png">
 	<link rel="apple-touch-icon" href="icons/icon-512.png">
 	<link rel="stylesheet" href="style.css">
