--- a/index.html
+++ b/index.html
@@ -369,6 +369,16 @@
 				<tr><td>01WO</td><td>Montel</td><td>Wolvega</td></tr>
 				<tr><td>01ZO</td><td>Montel</td><td>Zoeterwoude</td></tr>
 				<tr><td>01ZU</td><td>Montel</td><td>Zutphen</td></tr>
+				<tr><td>00H5</td><td>Morres</td><td>EnzoLuca Hulst</td></tr>
+				<tr><td>00H7</td><td>Morres</td><td>Koopjeshal Hulst</td></tr>
+				<tr><td>00H4</td><td>Morres</td><td>Meeneem Hulst</td></tr>
+				<tr><td>00HK</td><td>Morres</td><td>Musterring Hulst</td></tr>
+				<tr><td>00HR</td><td>Morres</td><td>Projecten Hulst</td></tr>
+				<tr><td>00HS</td><td>Morres</td><td>Slapen Hulst</td></tr>
+				<tr><td>00H6</td><td>Morres</td><td>Webshop Hulst</td></tr>
+				<tr><td>00HW</td><td>Morres</td><td>Wonen+Zitten Hulst</td></tr>
+				<tr><td>00H9</td><td>Morres</td><td>Natuzzi Hulst Hulst</td></tr>
+				<tr><td>00HP</td><td>Morres</td><td>Riant-Stoutenbeek Hulst Hulst</td></tr>
         	</tbody>
       	</table>
     </div>
