--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             	<tr><td>0111</td><td>Mandemakers</td><td>Zutphen</td></tr>
             	<tr><td>0114</td><td>Mandemakers</td><td>Amersfoort</td></tr>
             	<tr><td>0116</td><td>Mandemakers</td><td>Groningen</td></tr>
-            	<tr><td>0133</td><td>Mandemakers</td><td></td></tr>
+            	<tr><td>0133</td><td>Mandemakers</td><td>Zwolle</td></tr>
             	<tr><td>0136</td><td>Mandemakers</td><td>Amsterdam</td></tr>
             	<tr><td>0137</td><td>Mandemakers</td><td>Barendrecht</td></tr>
             	<tr><td>0138</td><td>Mandemakers</td><td>Wateringen</td></tr>
@@ -267,19 +267,6 @@
             	<tr><td>3040</td><td>Küchen Direct</td><td>Projecten</td></tr>
             	<tr><td>3021</td><td>Küchen Direct</td><td>Son</td></tr>
             	<tr><td>3020</td><td>Küchen Direct</td><td>Utrecht</td></tr>
-            	<tr><td>0114</td><td>Mandemakers</td><td>Amersfoort</td></tr>
-            	<tr><td>0136</td><td>Mandemakers</td><td>Amsterdam</td></tr>
-            	<tr><td>0137</td><td>Mandemakers</td><td>Barendrecht</td></tr>
-            	<tr><td>0141</td><td>Mandemakers</td><td>Beuningen</td></tr>
-            	<tr><td>0143</td><td>Mandemakers</td><td>Etten-Leur</td></tr>
-            	<tr><td>0116</td><td>Mandemakers</td><td>Groningen</td></tr>
-            	<tr><td>0195</td><td>Mandemakers</td><td>Hoofdkantoor Waalwijk</td></tr>
-            	<tr><td>0101</td><td>Mandemakers</td><td>Kaatsheuvel</td></tr>
-            	<tr><td>0140</td><td>Mandemakers</td><td>Projecten Waalwijk</td></tr>
-            	<tr><td>0138</td><td>Mandemakers</td><td>Wateringen</td></tr>
-            	<tr><td>0152</td><td>Mandemakers</td><td>Woerden</td></tr>
-            	<tr><td>0111</td><td>Mandemakers</td><td>Zutphen</td></tr>
-            	<tr><td>0133</td><td>Mandemakers</td><td></td></tr>
             	<tr><td>1498</td><td>Keukendump Nieuwenhuis</td><td>Assen</td></tr>
             	<tr><td>1434</td><td>Nieuwenhuis</td><td>Assen</td></tr>
             	<tr><td>1460</td><td>Nieuwenhuis</td><td>Deventer</td></tr>
